--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -15,6 +15,7 @@
     background-position: center;
     background-size: cover;
   }
+
   ul {
     display: flex;
     position: absolute;
@@ -46,6 +47,7 @@
       }
       &:hover {
         cursor: pointer;
+        background: rgba(255,255,255,.1);
         &:after {
           width: 100%;
           left:0;
